WD-30045 - Navigation mobile view fixed

--- a/static/sass/_snapcraft_p-navigation.scss
+++ b/static/sass/_snapcraft_p-navigation.scss
@@ -72,6 +72,13 @@
         syntax: "<percentage>";
       }
 
+      .p-navigation__nav--wrapper{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+      }
+
       .p-navigation__item--dropdown-toggle {
         position: relative;
       }
